<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Androntainer</string>
    <string name="todo" translatable="false">null</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="message_env">Currently managed apps:</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="menu_dashboard" translatable="false">Dashboard</string>
    <string name="status">Activated framework</string>
    <string name="framework_active" translatable="false">framework is activated.</string>
    <string name="module">Module</string>
    <string name="text_yourDevice">You Device</string>
    <string name="version" translatable="false">1.0</string>
    <string name="unknown" translatable="false">unknown</string>
    <string name="time_null" translatable="false">00:00</string>
    <string name="power">Power</string>
    <string name="drawer">Drawer</string>
    <string name="menu">Menu</string>
    <string name="sheet">Sheet</string>
    <string name="apps">Apps</string>
    <string name="select">Select</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="current_time">Current time</string>
    <string name="console">Console</string>
    <string name="target_application">Target application</string>
    <string name="time_of_running">Time of running</string>
    <string name="zero">Zero</string>
    <string name="device_info">Device Information</string>
    <string name="title_select_app">Select App</string>
    <string name="title_launcher_settings">Luncher Settings</string>
    <string name="title_selected">Selected</string>
    <string name="error_could_not_start">Not supported application.</string>
    <string name="btf">Prioritize switching from the background to the foreground</string>
    <string name="act">Reopen the app Activity every time</string>
    <string name="mode">Select working mode</string>
    <string name="hhmm" translatable="false">HHMM</string>
    <string name="yyyymmdde" translatable="false">YYYYMMDDE</string>

</resources>