<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_androntainer_plat_logo_24" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:checked="true"
        android:focusable="false"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:layout_marginTop="5dp"
        android:singleLine="false"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#616161"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/version_name"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxWidth="100dp"
        android:singleLine="true"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#616161"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/checkbox"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/package_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#616161"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/checkbox"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#616161"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/checkbox"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/package_name" />

</androidx.constraintlayout.widget.ConstraintLayout>